<resources>
    <string name="app_name">MindVisualizer</string>

    <string name="scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="pause">Pause / Resume</string>
    <string name="disconnect">Disconnect</string>
    <string name="calib">Calibration</string>
    <string name="start">Visualization</string>

    <string name="disconnected">DISCONNECTED</string>
    <string name="xml_calib">First, we need to calibrate your Muse headband.</string>
    <string name="xml_start_calib">Start calibration</string>
    <string name="return_prev">Return to the previous page</string>

    <string name="nothing">There is nothing to connect to.</string>
    <string name="toast_disconnect_exception">The mobile isn\'t connected to any device!</string>
    <string name="toast_start_exception_not_co">You have to connect to a Muse headband!</string>
    <string name="toast_start_exception_not_ca">You have to calibrate your Muse headband!</string>

    <string name="calibSuccessT">Calibration complete!</string>
    <string name="calibrating">Calibrating...</string>


    <string name="calibSuccessM">You can now start visualising your mindset, if you wish!</string>
    <string name="ok">OK</string>

    <string name="eegString1">EEG Channel 1</string>
    <string name="eegString2">EEG Channel 2</string>
    <string name="eegString3">EEG Channel 3</string>
    <string name="eegString4">EEG Channel 4</string>
    <string name="eegStringAuxL">EEG Channel 5</string>
    <string name="eegStringAuxR">EEG Channel 6</string>

    <string name="eegString1Out">EEG Channel 1 Output</string>
    <string name="eegString2Out">EEG Channel 2 Output</string>
    <string name="eegString3Out">EEG Channel 3 Output</string>
    <string name="eegString4Out">EEG Channel 4 Output</string>
    <string name="eegStringAuxLOut">EEG Channel 5 Output</string>
    <string name="eegStringAuxROut">EEG Channel 6 Output</string>

    <string name="avgAlpha1">Average Alpha 1:</string>
    <string name="avgAlpha1Out">average alpha</string>
    <string name="avgAbsAlpha1Out">average abs alpha</string>


    <string name="permission_dialog_title">Muse Needs Your Permission</string>
    <string name="permission_dialog_description">Muse needs a few permissions to work properly. On the next screens, tap "Allow" to proceed. If you deny, Muse will not work properly until you go into your Android settings and allow.</string>
    <string name="permission_dialog_understand">I Understand</string>


</resources>
